--- a/tests/test.referrer.keywords.old.html
+++ b/tests/test.referrer.keywords.old.html
@@ -3,7 +3,7 @@
     <link charset='utf-8' href='lib/testsuite.css' media='screen' rel='stylesheet' type='text/css' />
     <script type="text/javascript" src="lib/jquery-1.3.2.min.js"></script>
     <script type="text/javascript" src="lib/testrunner.js"></script>
-    <script type="text/javascript" src="../referrer.keywords.2.js"></script>
+    <script type="text/javascript" src="../referrer.old.js"></script>
     <script type="text/javascript" src="tests.js"></script>
     <script type="text/javascript">
     </script>
@@ -13,3 +13,4 @@
 
   </body>
 </html>
+
